<resources>
    <string name="app_name">AppCorona</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>
    <string name="action_refresh">Atualizar histórico</string>
    <string name="action_cleaner">Limpar histórico</string>
    <string name="title_activity_sobre">Sobre o AppCorona app</string>
    <string name="action_email">Enviar histórico por E-mail</string>

    <string name="sobre_versao">Versão: 1.0.0</string>
    <string name="sobre_logo">Logo Softcod</string>
    <string name="sobre_todos">Todos diretos reservados</string>
    <string name="sobre_ri">Softcod</string>
    <string name="sobre_whatsapp">WhatsApp: </string>
    <string name="sobre_call">Call Center: </string>
    <string name="sobre_link"><u>www.softcod.com.br</u></string>

    <string name="botao_voltar">Voltar</string>

    <string name="hello">Olá!</string>
    <string name="skip">PULAR</string>
    <string name="start">COMEÇAR</string>
    <string name="connection">Conexão</string>
    <string name="login">LOGIN</string>
    <string name="forgot">Redefinir</string>
    <string name="back">VOLTAR</string>
    <string name="next">PRÓXIMO</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="cadastrese">CADASTRE-SE</string>
    <string name="entrar">ENTRAR</string>
    <string name="enviar">ENVIAR</string>
    <string name="esqueceuSenha">Esqueceu sua senha?</string>
    <string name="ok">OK</string>
    <string name="invalidEmail">E-mail Inválido</string>
    <string name="invalidEmailText">O endereço de E-mail digitado não é válido.</string>
    <string name="invalidPasswordText">Senhas não confere.</string>
    <string name="authenticationFailed">Falha na autenticação. Por favor, verifique sua conexão com a internet.</string>
    <string name="incorrectPassword">Senha incorreta</string>
    <string name="bellNotRegistered">Não encontramos seu equipamento!</string>
    <string name="registerNewBell">Quer cadastrar um novo equipamento?</string>
    <string name="register">Cadastrar</string>
    <string name="no">Não</string>
    <string name="contact">Contato</string>
    <string name="authenticating">Autenticando</string>
    <string name="pleaseWait">Por favor, aguarde..</string>
    <string name="notification">Notificações</string>
    <string name="finish">CONCLUIR</string>
    <string name="about">Sobre</string>
    <string name="logout">Sair</string>
    <string name="MTBF_nome">MTBF</string>
    <string name="maquinas">Máquinas</string>
    <string name="maquina">Máquina</string>
    <string name="alertas_nome">Alertas</string>
    <string name="email_mac">E-mail da Maquina</string>
    <string name="senhaMac">Senha da  Maquina</string>
    <string name="contactData">Dados para Contato</string>
    <string name="name">Nome</string>
    <string name="email">E-mail</string>
    <string name="notificacao_entrar">Receber Notificações</string>
    <string name="alerta_ativar">Receber Alerta Vibratório</string>
    <string name="alertaLuz">Receber Alerta Luminoso</string>
    <string name="sons_mac">Som da Maquina</string>
    <string name="notInformed">Não informado</string>
    <string name="excluir_mac">Remover Maquina</string>
    <string name="cancel">Cancelar</string>
    <string name="emailChanged">E-mail alterado com sucesso!</string>
    <string name="passwordDots">••••••••</string>
    <string name="passwordChanged">Senha alterada com sucesso!</string>
    <string name="nameChanged">Nome alterado com sucesso!</string>
    <string name="contactEmail">E-mail para contato</string>
    <string name="changeContactEmail">Alterar E-mail para contato</string>
    <string name="changeContactName">Alterar nome</string>
    <string name="changeBellsEmail">Alterar E-mail da Maquina</string>
    <string name="changeBellsPassword">Alterar senha da Maquina</string>
    <string name="removeBellDescription">Tem certeza que deseja remover a Maquina? A ação não pode ser desfeita.</string>
    <string name="bellRemoved">Maquina removida com sucesso!</string>
    <string name="clearHistory">Limpar histórico</string>
    <string name="clearHistoryDescription">Tem certeza que deseja limpar o histórico? Essa ação não pode ser desfeita.</string>
    <string name="clearHistoryButton">Limpar histórico</string>
    <string name="couldNotSendEmail">Não foi possível enviar E-mail</string>
    <string name="couldNotSendEmailDescription">Nenhum cliente de E-mail foi encontrado no dispositivo.</string>
    <string name="noNotifications">Nenhuma notificação a ser exibida</string>
    <string name="noMaqs">Nenhuma maquina a ser exibida</string>
    <string name="defaultSound">Som Padrão</string>
    <string name="googleVoice">Voz do Google</string>
    <string name="recordSound">Gravar Som</string>
    <string name="devicesSounds">Sons do Aparelho</string>
    <string name="typeText">Insira o texto</string>
    <string name="typeTextDescription">Insira o texto a ser falado pela voz do Google.</string>
    <string name="settings">Configurações</string>
    <string name="stop">Parar</string>
    <string name="listen">Ouvir</string>
    <string name="recordPermissionNotGranted">Permissão para gravar audio não foi concedida.</string>
    <string name="filter">Filtrar</string>
    <string name="filterByPeriod">Filtrar por período</string>
    <string name="chooseSound">Escolha o som</string>
    <string name="asConfiguredOnWebPanel">Conforme configurado no painel Web</string>
    <string name="passwordDescription">Mínimo de 8 caracteres (letras e números apenas) conforme foi cadastrado</string>
    <string name="nameDescription">Será utilizado para eventuais contatos da Rede Industrial</string>
    <string name="ringtoneDescription">Som que irá tocar quando receber um alerta de parada</string>
    <string name="patent">Patente de Invenção INPI ************</string>
    <string name="typeYourName">Informe seu nome</string>
    <string name="invalidPhoneNumber">Telefone inválido</string>
    <string name="default_notification_channel_id">mtbf_notification</string>
    <string name="default_notification_channel_name">mtbf_notification_name</string>
    <string name="senha">Senha</string>
    <string name="servidor">http://softcod.com.br/api</string>
    <string name="orientacaoSenha">DIGITE DE 8 À 15 CARACTERES, PREFERENCIALMENTE COM LETRAS E NUMEROS <br/> NÃO COLOCAR CARACTERES ESPECIAIS</string>
    <string name="informacaoLogin">Usar mesmo E-mail e Senha previamente cadastro neste sistema.</string>
    <string name="digitos">0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="nome">Seu nome.</string>
    <string name="telefone">Telefone</string>
    <string name="confirmarSenha">Confirmar senha</string>
    <string name="emailVazio">E-mail: usuario@dominio.com</string>
    <string name="senhaVazia">Digte a Senha</string>
    <string name="semMaquinas">Para adicionar novas maquinas click no botão +, logo abaixo.</string>
    <string name="Escanear">Escanear QRcode</string>
    <string name="salvar">Salvar</string>
    <string name="serial">Serial</string>
    <string name="tituloInfo">INFORMAÇÃO</string>
    <string name="orientacaoCadastroMac">Agora vamos cadastrar as maquinas,<br /> será preciso ler o QRcode que se encontra no MAC.</string>
    <string name="cameraErroPermissao">Não há permissão para utilizar a câmera!</string>
    <string name="erroScannear">Não foi possível escanear!</string>
    <string name="horarioCadastro">Quanto tempo esta máquina trabalha diariamente?</string>
    <string name="horario">HORÁRIO CADASTRADO:</string>
    <string name="notificacaoMaquinas">notificacaoMaquinas</string>
    <string name="focarQR">Mire no QRcode!</string>
    <string name="informacao">INORMAÇÃO</string>
    <string name="informarEmail">Usar mesmo e-mail configurado no sistema web.</string>
    <string name="motivo">Motivo</string>
    <string name="tipoParada">TIPO DE PARADA</string>
    <string name="hora">DATA E HORA QUE PAROU</string>
    <string name="vermelho">Inesperada.</string>
    <string name="amarelo">Manutenção.</string>
    <string name="verde">Programada.</string>
    <string name="precisamosPremissao">Nosso sistema precisa da permissão para acessar o armazenamento do seu dispositivo.</string>
    <string name="historico">Histórico do alerta.</string>
    <string name="anexo">Histórico em anexo.</string>
    <string name="tituloEmail">Preparado para enviar E-mail.</string>
    <string name="semPermissao">Permissão não concedida!</string>
    <string name="necessidade">"Para exportar o histórico por E-mail a "</string>
    <string name="editarUsuario">Editar usuário.</string>
    <string name="sairUsuarioEdCa">seus dados não serão alterados, esta certo disso??</string>
    <string name="noAlteracao">Alterações não realizadas</string>
    <string name="obrigatorio">Esta situação é obrigatório apresenta o motivo da interrupção inesperada.</string>
    <string name="motivoParada">Descreva brevimente o motivo, e o tipo da interrupção:</string>
    <string name="keyEmail">email</string>
    <string name="incial">INÍCIO</string>
    <string name="digiteApelido">Digite abaixo qual máquina será monitorada.</string>
    <string name="editarMac">Editar MAC</string>
    <string name="keyMaquina">Maquina</string>
</resources>
