<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_maqs"
            android:icon="@drawable/ic_action_name"
            android:title="@string/maquinas"/>

        <item
            android:id="@+id/nav_editaUsario"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/editarUsuario"
            />

        <!--  <item
              android:id="@+id/nav_settings"
              android:icon="@drawable/ic_settings_black_24dp"
              android:title="@string/settings"/>-->

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/about"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/logout"/>

    </group>

</menu>
