<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cleaner"
        android:orderInCategory="101"
        android:title="@string/action_cleaner"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_email"
        android:orderInCategory="102"
        android:title="@string/action_email"
        app:showAsAction="never" />


    <!--item
        android:id="@+id/action_filter"
        android:orderInCategory="103"
        android:title="@string/filter"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_filter_list_black_24dp"/-->

</menu>
