<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.softcod.appCorona.controller.CadMACActivity">
    <LinearLayout
        android:id="@+id/contTitulo"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tituloMac"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/cadastrar"
            android:textColor="@android:color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/refMacQR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginStart="15dp"
            android:text="@string/focarQR"
            android:textColor="@color/white"
            android:textSize="20sp"

            />

    </LinearLayout>

    <TextView
        android:id="@+id/maquinaLeb"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:labelFor="@id/maquina"
        android:text="@string/digiteApelido"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contTitulo" />

    <EditText
        android:id="@+id/maquina"
        android:layout_width="367dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/maquina"
        android:inputType="textPersonName"

        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maquinaLeb" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:text="@string/horarioCadastro"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maquina" />

    <TimePicker
        android:id="@+id/tempo"
        android:layout_width="258dp"
        android:layout_height="214dp"
        android:layout_marginTop="20dp"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/QRbutton"
        android:layout_width="159dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:layout_weight="0"
        android:background="@color/colorPrimary"
        android:text="@string/Escanear"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempo" />

    <Button
        android:id="@+id/button"
        android:layout_width="156dp"
        android:layout_height="45dp"
        android:layout_marginTop="56dp"
        android:layout_weight="0"
        android:background="@color/colorAccent"
        android:text="@string/salvar"
        android:textColor="@color/white_smoke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QRbutton" />

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">
<LinearLayout
    android:id="@+id/casa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/coloItemCard"
            android:contentDescription="@string/incial"
            android:src="@mipmap/ic_home_foreground"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/incial"
            android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>