<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    app:cardCornerRadius="15dp"
    android:foregroundGravity="center"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:backgroundTint="@color/coloItemCard"
    android:orientation="horizontal"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="396dp"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/notification_imageView"
            android:layout_width="53dp"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/tipoParada"
            app:layout_constraintEnd_toStartOf="@+id/horarioParada"
            app:layout_constraintHorizontal_bias="0.156"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_engrenagem" />

        <TextView
            android:id="@+id/motivoParada"
            android:layout_width="177dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/maquina"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maquinaParada" />

        <TextView
            android:id="@+id/maquinaParada"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="4dp"
            android:padding="1dp"
            android:text="@string/motivo"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/notification_imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/horarioParada"
            android:layout_width="155dp"
            android:layout_height="19dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="8dp"
            android:text="@string/hora"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>